# 3-python-package-pypal

./: LICENSE  README.md  example_usage.py  pyproject.toml  simple_test.py
.github/workflows/: ci.yml  python-package.yml
src/pypal/: __init__.py  __main__.py  generator.py
tests/: test_generator.py
